--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,8 @@ services:
     volumes:
       - ./:/usr/src/app
     tty: true
+    environment:
+      AWS_REGION: "${AWS_REGION}"
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_PROFILE: "${AWS_PROFILE}"
